2014-06-11 : Bug fixed where new files with same filename displaying correct OR link
2014-06-11 : Check for XMLWriter extension added to settings area
2014-06-11 : Bug fixed with Allow Non OR file type setting not being changed in Turnitin.
2014-06-11 : Version file updated for Moodle 2.7+ compatibility
2014-06-11 : Javascript reorganised to fit better with Moodle guidelines
2014-06-11 : Font Awesome added to plugin
2014-06-11 : Javascript cleaned up in block to use Moodle value
2014-06-11 : EULA closing reworked to accomodate IE
2014-06-11 : Anonymous marking and Translated matching settings removed in PP modules if they are disabled in config. 
2014-06-11 : Ability added for instructors to refresh individual rows in a Turnitin Assignment
2014-06-11 : Automatic grade refreshing from Turnitin can now be turned off in Turnitin Assignments
2014-06-11 : Erroneous debugging removed
2014-04-17 : Full Catalan language pack added.
2014-04-17 : Timestamp was being incorrectly set preventing more than 1 batch of submissions updating from Turnitin. 
2014-04-17 : Student is now enrolled on the class when checking EULA acceptance to ensure they are on account.
2014-04-17 : Infinite loading of Document viewer stopped.
2014-04-17 : Originality Report link removed if no score.
2014-04-17 : Submissions in Plagiarism plugin stopped if there has been 5 unsuccessful attempts.
2014-04-17 : Conflicts with Bootstrap theme for tooltips and fixed grademark link position fixed.
2014-04-17 : Incorrect settings link in the Plagiarism plugin fixed.
2014-04-17 : Grademark link removed for student if a grade has not been set in plagiarism plugin.
2014-04-17 : Incorrect links to GradeMark and Originality Report for students have been hidden.  
2014-04-17 : Feedback release date changed on forum with plagiarism plugin to be the same as start date.
2014-02-26 : Previous Turnitin users were not being joined to account on Plagiarism plugin.
2014-02-26 : Incorrect grade scale calculation.